--- a/tester-women .ipynb
+++ b/tester-women .ipynb
@@ -2,50 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "source": [
-    "# The path to our CSV file\r\n",
-    "file = \"Resources/olympic_data.csv\"\r\n",
-    "\r\n",
-    "# Read our data into pandas\r\n",
-    "df = pd.read_csv(file)\r\n",
-    "df.head()"
-   ],
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "   ID                      Name Sex   Age  Height  Weight            Team  \\\n",
-       "0   1                 A Dijiang   M  24.0   180.0    80.0           China   \n",
-       "1   2                  A Lamusi   M  23.0   170.0    60.0           China   \n",
-       "2   3       Gunnar Nielsen Aaby   M  24.0     NaN     NaN         Denmark   \n",
-       "3   4      Edgar Lindenau Aabye   M  34.0     NaN     NaN  Denmark/Sweden   \n",
-       "4   5  Christine Jacoba Aaftink   F  21.0   185.0    82.0     Netherlands   \n",
-       "\n",
-       "   NOC        Games  Year  Season       City          Sport  \\\n",
-       "0  CHN  1992 Summer  1992  Summer  Barcelona     Basketball   \n",
-       "1  CHN  2012 Summer  2012  Summer     London           Judo   \n",
-       "2  DEN  1920 Summer  1920  Summer  Antwerpen       Football   \n",
-       "3  DEN  1900 Summer  1900  Summer      Paris     Tug-Of-War   \n",
-       "4  NED  1988 Winter  1988  Winter    Calgary  Speed Skating   \n",
-       "\n",
-       "                              Event Medal  \n",
-       "0       Basketball Men's Basketball   NaN  \n",
-       "1      Judo Men's Extra-Lightweight   NaN  \n",
-       "2           Football Men's Football   NaN  \n",
-       "3       Tug-Of-War Men's Tug-Of-War  Gold  \n",
-       "4  Speed Skating Women's 500 metres   NaN  "
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -176,23 +146,50 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "   ID                      Name Sex   Age  Height  Weight            Team  \\\n",
+       "0   1                 A Dijiang   M  24.0   180.0    80.0           China   \n",
+       "1   2                  A Lamusi   M  23.0   170.0    60.0           China   \n",
+       "2   3       Gunnar Nielsen Aaby   M  24.0     NaN     NaN         Denmark   \n",
+       "3   4      Edgar Lindenau Aabye   M  34.0     NaN     NaN  Denmark/Sweden   \n",
+       "4   5  Christine Jacoba Aaftink   F  21.0   185.0    82.0     Netherlands   \n",
+       "\n",
+       "   NOC        Games  Year  Season       City          Sport  \\\n",
+       "0  CHN  1992 Summer  1992  Summer  Barcelona     Basketball   \n",
+       "1  CHN  2012 Summer  2012  Summer     London           Judo   \n",
+       "2  DEN  1920 Summer  1920  Summer  Antwerpen       Football   \n",
+       "3  DEN  1900 Summer  1900  Summer      Paris     Tug-Of-War   \n",
+       "4  NED  1988 Winter  1988  Winter    Calgary  Speed Skating   \n",
+       "\n",
+       "                              Event Medal  \n",
+       "0       Basketball Men's Basketball   NaN  \n",
+       "1      Judo Men's Extra-Lightweight   NaN  \n",
+       "2           Football Men's Football   NaN  \n",
+       "3       Tug-Of-War Men's Tug-Of-War  Gold  \n",
+       "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "# The path to our CSV file\n",
+    "file = \"Resources/olympic_data.csv\"\n",
+    "\n",
+    "# Read our data into pandas\n",
+    "df = pd.read_csv(file)\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "source": [
-    "df.columns"
-   ],
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "Index(['ID', 'Name', 'Sex', 'Age', 'Height', 'Weight', 'Team', 'NOC', 'Games',\n",
@@ -200,24 +197,117 @@
        "      dtype='object')"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "df.columns"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "source": [
-    "starter_olympics_df = df.loc[:, ['Name', 'Sex', 'Age', 'Team',\r\n",
-    "                                'Year', 'Sport', 'Event', 'Medal']]\r\n",
-    "starter_olympics_df.head()\r\n"
-   ],
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Sport</th>\n",
+       "      <th>Event</th>\n",
+       "      <th>Medal</th>\n",
+       "      <th>NOC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A Dijiang</td>\n",
+       "      <td>M</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>Basketball</td>\n",
+       "      <td>Basketball Men's Basketball</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CHN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A Lamusi</td>\n",
+       "      <td>M</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>Judo</td>\n",
+       "      <td>Judo Men's Extra-Lightweight</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CHN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Gunnar Nielsen Aaby</td>\n",
+       "      <td>M</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>Football</td>\n",
+       "      <td>Football Men's Football</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DEN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Edgar Lindenau Aabye</td>\n",
+       "      <td>M</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>Denmark/Sweden</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>Tug-Of-War</td>\n",
+       "      <td>Tug-Of-War Men's Tug-Of-War</td>\n",
+       "      <td>Gold</td>\n",
+       "      <td>DEN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Christine Jacoba Aaftink</td>\n",
+       "      <td>F</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>Speed Skating</td>\n",
+       "      <td>Speed Skating Women's 500 metres</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NED</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "                       Name Sex   Age            Team  Year          Sport  \\\n",
        "0                 A Dijiang   M  24.0           China  1992     Basketball   \n",
@@ -226,13 +316,32 @@
        "3      Edgar Lindenau Aabye   M  34.0  Denmark/Sweden  1900     Tug-Of-War   \n",
        "4  Christine Jacoba Aaftink   F  21.0     Netherlands  1988  Speed Skating   \n",
        "\n",
-       "                              Event Medal  \n",
-       "0       Basketball Men's Basketball   NaN  \n",
-       "1      Judo Men's Extra-Lightweight   NaN  \n",
-       "2           Football Men's Football   NaN  \n",
-       "3       Tug-Of-War Men's Tug-Of-War  Gold  \n",
-       "4  Speed Skating Women's 500 metres   NaN  "
-      ],
+       "                              Event Medal  NOC  \n",
+       "0       Basketball Men's Basketball   NaN  CHN  \n",
+       "1      Judo Men's Extra-Lightweight   NaN  CHN  \n",
+       "2           Football Men's Football   NaN  DEN  \n",
+       "3       Tug-Of-War Men's Tug-Of-War  Gold  DEN  \n",
+       "4  Speed Skating Women's 500 metres   NaN  NED  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "starter_olympics_df = df.loc[:, ['Name', 'Sex', 'Age', 'Team',\n",
+    "                                'Year', 'Sport', 'Event', 'Medal', 'NOC']]\n",
+    "starter_olympics_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -261,80 +370,189 @@
        "      <th>Event</th>\n",
        "      <th>Medal</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NOC</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A Dijiang</td>\n",
-       "      <td>M</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>China</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>Basketball</td>\n",
-       "      <td>Basketball Men's Basketball</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>AFG</th>\n",
+       "      <td>126</td>\n",
+       "      <td>126</td>\n",
+       "      <td>78</td>\n",
+       "      <td>126</td>\n",
+       "      <td>126</td>\n",
+       "      <td>126</td>\n",
+       "      <td>126</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A Lamusi</td>\n",
-       "      <td>M</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>China</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Judo</td>\n",
-       "      <td>Judo Men's Extra-Lightweight</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>AHO</th>\n",
+       "      <td>79</td>\n",
+       "      <td>79</td>\n",
+       "      <td>78</td>\n",
+       "      <td>79</td>\n",
+       "      <td>79</td>\n",
+       "      <td>79</td>\n",
+       "      <td>79</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Gunnar Nielsen Aaby</td>\n",
-       "      <td>M</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>Denmark</td>\n",
-       "      <td>1920</td>\n",
-       "      <td>Football</td>\n",
-       "      <td>Football Men's Football</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>ALB</th>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Edgar Lindenau Aabye</td>\n",
-       "      <td>M</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>Denmark/Sweden</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>Tug-Of-War</td>\n",
-       "      <td>Tug-Of-War Men's Tug-Of-War</td>\n",
-       "      <td>Gold</td>\n",
+       "      <th>ALG</th>\n",
+       "      <td>551</td>\n",
+       "      <td>551</td>\n",
+       "      <td>545</td>\n",
+       "      <td>551</td>\n",
+       "      <td>551</td>\n",
+       "      <td>551</td>\n",
+       "      <td>551</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Christine Jacoba Aaftink</td>\n",
-       "      <td>F</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>Netherlands</td>\n",
-       "      <td>1988</td>\n",
-       "      <td>Speed Skating</td>\n",
-       "      <td>Speed Skating Women's 500 metres</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>AND</th>\n",
+       "      <td>169</td>\n",
+       "      <td>169</td>\n",
+       "      <td>169</td>\n",
+       "      <td>169</td>\n",
+       "      <td>169</td>\n",
+       "      <td>169</td>\n",
+       "      <td>169</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YEM</th>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YMD</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YUG</th>\n",
+       "      <td>2583</td>\n",
+       "      <td>2583</td>\n",
+       "      <td>2454</td>\n",
+       "      <td>2583</td>\n",
+       "      <td>2583</td>\n",
+       "      <td>2583</td>\n",
+       "      <td>2583</td>\n",
+       "      <td>390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZAM</th>\n",
+       "      <td>183</td>\n",
+       "      <td>183</td>\n",
+       "      <td>154</td>\n",
+       "      <td>183</td>\n",
+       "      <td>183</td>\n",
+       "      <td>183</td>\n",
+       "      <td>183</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZIM</th>\n",
+       "      <td>311</td>\n",
+       "      <td>311</td>\n",
+       "      <td>309</td>\n",
+       "      <td>311</td>\n",
+       "      <td>311</td>\n",
+       "      <td>311</td>\n",
+       "      <td>311</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>230 rows × 8 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "     Name   Sex   Age  Team  Year  Sport  Event  Medal\n",
+       "NOC                                                   \n",
+       "AFG   126   126    78   126   126    126    126      2\n",
+       "AHO    79    79    78    79    79     79     79      1\n",
+       "ALB    70    70    70    70    70     70     70      0\n",
+       "ALG   551   551   545   551   551    551    551     17\n",
+       "AND   169   169   169   169   169    169    169      0\n",
+       "..    ...   ...   ...   ...   ...    ...    ...    ...\n",
+       "YEM    32    32    32    32    32     32     32      0\n",
+       "YMD     5     5     5     5     5      5      5      0\n",
+       "YUG  2583  2583  2454  2583  2583   2583   2583    390\n",
+       "ZAM   183   183   154   183   183    183    183      2\n",
+       "ZIM   311   311   309   311   311    311    311     22\n",
+       "\n",
+       "[230 rows x 8 columns]"
       ]
      },
+     "execution_count": 30,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "noc_grp = starter_olympics_df.groupby(by='NOC').count()\n",
+    "nc_df = pd.DataFrame(noc_grp)\n",
+    "nc_df\n",
+    "#noc_gender = nc_df.loc[nc_df['Sex']=='F'].count()\n",
+    "#print(noc_gender)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -342,8 +560,9 @@
    "hash": "1094b6c851ee2dfcde7800483b86af07dc336cbad65f7e6986e29e39f634f912"
   },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
